# local-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: example-config.yaml
src/local_agent/: __init__.py  cli.py
src/local_agent/audit/: __init__.py  logger.py
src/local_agent/cli/: __init__.py  database.py  identity.py  logs.py  main.py  memory.py  providers.py  rag.py  threads.py
src/local_agent/config/: __init__.py  loader.py  schema.py
src/local_agent/connectors/: __init__.py  filesystem.py  qdrant.py
src/local_agent/identities/: __init__.py  loader.py
src/local_agent/identities/defaults/: default.txt  nova.txt  principle_engineer.txt
src/local_agent/persistence/: db.py  db_models.py  init.py  rag.py
src/local_agent/policy/: __init__.py  approval.py  engine.py
src/local_agent/providers/: anthropic.py  base.py  factory.py  ollama.py  openai.py
src/local_agent/runtime/: __init__.py  agent.py
src/local_agent/services/: __init__.py  embedding.py  ingestion.py
src/local_agent/tools/: filesystem.py  rag.py  registry.py  schema.py
src/local_agent/web/: app.py  approval_queue.py  approval_workflow.py  dependencies.py  models.py  session_manager.py
src/local_agent/web/routes/: approvals.py  chat.py  identities.py  sessions.py  threads.py
tests/: __init__.py
web/: README.md  tailwind.config.js
web/src/: App.tsx
web/src/components/: ApprovalCard.tsx  ApprovalPanel.tsx  ChatHeader.tsx  ChatMessage.tsx  IdentitySelector.tsx  MessageInput.tsx  MessageList.tsx  ThreadSidebar.tsx
web/src/context/: AgentContext.tsx
web/src/hooks/: useApprovalPolling.ts  useExecutionPolling.ts  useMessageHistory.ts  useThreads.ts
web/src/lib/: api-client.ts  types.ts
